# map-reduce-az

./: CMakeLists.txt  README.md  install_library.sh  user_interface.py
deploy/: k8s-ingress.yaml  k8s-master.yaml  k8s-worker.yaml
docker/: Dockerfile.master  Dockerfile.proxy  Dockerfile.worker  base.Dockerfile
protos/: mrmsg.proto
py_scripts/: mapper.py  reducer.py
src/: azure_storage.hpp  dnslookup.h  dto.hpp  etcd_backup.hpp  function_helper.hpp  http_server.hpp  leader_election.hpp
src/master/: master.cc
src/proxy/: proxy.cc
src/worker/: worker.cc
